# fim-camp-2024

./: .gitignore
social-media-app/: .gitlab-ci.yml  README.md  TODO  db.sqlite3  flake.nix  pyproject.toml  requirements.txt
social-media-app/blog/: admin.py  consumers.py  forms.py  models.py  notifications.py  urls.py  views.py
social-media-app/blog/migrations/: 0001_initial.py  0002_follow_like_newsletter_newslettersubscription_and_more.py  0003_remove_postlike_post_remove_timecapsule_user_and_more.py  0004_alter_follow_followed_user_alter_follow_user_and_more.py  0005_alter_follow_followed_user_alter_follow_user_and_more.py  0006_post_image_post_likes_profile_bio_profile_birth_date_and_more.py  0007_alter_post_image_alter_profile_profile_image_and_more.py  0008_remove_newslettersubscription_subscribed_to_and_more.py  0009_remove_post_likes_post_downvotes_post_upvotes.py  0010_alter_notification_user.py  0011_comment_post_comments.py  0012_remove_post_comments_alter_comment_post.py  0013_post_video.py  0014_remove_notification_read.py  0015_remove_notification_link.py  0016_chatmessage.py
social-media-app/blog/templates/blog/: base.html  header.html  index.html
social-media-app/blog/templates/blog/chat/: chat.html
social-media-app/blog/templates/blog/newsletter/: create_newsletter.html  (+1 more)
social-media-app/blog/templates/registration/: login.html  register.html
social-media-app/blog/utils/: __init__.py
social-media-app/social_media_app/: asgi.py  settings.py  urls.py  wsgi.py
social-media-app/static/: style.css
social-media-app/static/css/home/: home.css
(+14 files in other folders)
