[tool.poetry]
name = "social-media-app"
version = "0.1.0"
description = ""
authors = ["Benedikt Fein <fein@fim.uni-passau.de>"]
license = "EUPL-1.2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4"
django = "~5.0.0"
django-bootstrap5 = "~24.2.0"
django-debug-toolbar = "~4.4.0"
fontawesomefree = "~6.6.0"
pillow = "~10.4.0"


[tool.poetry.group.dev.dependencies]
black = "~24.4.0"
django-stubs = {version = "~5.0.0", extras = ["compatible-mypy"]}
djlint = "~1.34.0"
isort = "~5.13.0"
mypy = "~1.11.0"
ruff = "~0.5.0"


[tool.django-stubs]
django_settings_module = "social_media_app.settings"


[tool.isort]
profile = "black"


[tool.mypy]
plugins = ["mypy_django_plugin.main"]


[tool.ruff]
line-length = 88
output-format = "full"
target-version = "py311"


[tool.djlint]
profile="django"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
